# lightcrawl

./: .gitignore  README.md  delete.sh  docker-compose.yml  start.sh  stop.sh
config/searxng/: settings.yml.template  uwsgi.ini
services/api/: Dockerfile  pyproject.toml
services/api/src/: config.py  main.py  mcp_server.py  redis_client.py  worker.py
services/api/src/api/: auth.py  routes.py  schemas.py
services/api/src/scraper/: __init__.py  extractor.py  queue.py
services/api/src/search/: __init__.py  base.py  searxng.py
services/playwright/: Dockerfile  requirements.txt
services/playwright/src/: main.py
